# broken-keys

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: resource.h
include/core/: PianoKey.h  PianoKeyboard.h
include/ui/: ObjectGrid.h
src/core/: PianoKey.cpp  PianoKeyboard.cpp
src/ui/: ObjectGrid.cpp
